Archive2/e5/fc0addebd8c5dd/output
main.cpp: In instantiation of 'T increment_B(T) [with T = int]':
main.cpp:9:29:   required from here
main.cpp:9:29: error: explicit instantiation of 'T increment_B(T) [with T = int]' but no definition available [-fpermissive]
 template int increment_B(int); // Error: no definition available
                             ^
main.cpp: In instantiation of 'T increment_B(T) [with T = int]':
main.cpp:9:29:   required from here
main.cpp:9:29: error: explicit instantiation of 'T increment_B(T) [with T = int]' but no definition available [-fpermissive]
	.file	"main.cpp"
